Waves over about me fixed on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,7 @@ width:110px;
   position:absolute;
   left:0px;
   float:left;
+  display: none;
 }
 .svg-separator{
   height: 60px;
